# SideProjects

AStarAgent/: AStarAgentProgram.slnx
AStarAgent/AStarAgentProgram/: AStarAgentProgram.slnx  AStarAgentProgram.vcxproj  AStarAgentProgram.vcxproj.filters  Globals.h  UI.cpp  UI.h  agent.cpp  agent.h  astaragent.cpp  astaragent.h  globals.h  main.cpp  state.cpp  state.h
AStarAgent/AStarAgentProgram/main/: Main.cpp
AStarAgent/AStarAgentProgram/model/: Agent.cpp  Agent.h  State.h
AStarAgent/AStarAgentProgram/ui/: UI.h
AStarAgent/AStarAgentProgram/utils/: Globals.h
TaskManager/: CMakeLists.txt  CMakeSettings.json
TaskManager/cmake/: CompilerWarnings.cmake
TaskManager/src/app/: CMakeLists.txt
TaskManager/src/core/: CMakeLists.txt  Date.h  TaskListManager.cpp  TaskListManager.h  TaskManagerApp.cpp  TaskManagerApp.h
TaskManager/src/ui/: CMakeLists.txt  UI.h
TaskManager/src/utils/: CMakeLists.txt  Math.util.h  String.util.h
TaskManager/tests/: CMakeLists.txt
TaskManagerWorkspace/: TaskManagerApp.slnx
TaskManagerWorkspace/TaskManagerApp/: TaskManagerApp.vcxproj  TaskManagerApp.vcxproj.filters  app_data.txt
TaskManagerWorkspace/TaskManagerApp.Tests/: TaskManagerApp.Tests.vcxproj
TaskManagerWorkspace/TaskManagerApp/main/: main.cpp
TaskManagerWorkspace/TaskManagerApp/model/: Date.cpp  Date.h  Task.cpp  Task.h  TaskList.cpp  TaskList.h  TaskManagerApp.cpp  ToDoListApp.vcxproj  ToDoListApp.vcxproj.filters
TaskManagerWorkspace/TaskManagerApp/ui/: UI.cpp
TaskManagerWorkspace/TaskManagerApp/utils/: Math.util.cpp  String.util.cpp
ToDoListApp/: ToDoListApp.sln  main.cpp
ToDoListWorkspace/: ToDoListApp.sln
ToDoListWorkspace/ToDoListApp/: Date.cpp  Date.h  Date.util.cpp  Date.util.h  Math.util.cpp  Math.util.h  Task.cpp  ToDoListApp.vcxproj  ToDoListApp.vcxproj.filters  app_data.txt
ToDoListWorkspace/ToDoListApp.Tests/: ToDoListApp.Tests.cpp  ToDoListApp.Tests.vcxproj  ToDoListApp.Tests.vcxproj.filters
ToDoListWorkspace/ToDoListApp.tests/: test.cpp
ToDoListWorkspace/ToDoListApp/main/: main.cpp
ToDoListWorkspace/ToDoListApp/model/: Date.cpp  Date.h  Task.cpp  Task.h  TaskList.cpp  TaskList.h  TodoListApp.cpp  TodoListApp.h  TodoListManager.cpp  TodoListManager.h
ToDoListWorkspace/ToDoListApp/ui/: UI.cpp  UI.h
ToDoListWorkspace/ToDoListApp/utils/: Math.util.cpp  String.util.cpp  String.util.h
